--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>prueba</name>
+	<name>Proyecto_MiguelXML</name>
 	<comment></comment>
 	<projects>
 	</projects>
